--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  overflow: auto;
+  font-family: sans-serif;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 * {
